@@ -34,6 +34,8 @@ set_full_path(THIS_DIR_HEADERS
   statistics.hpp
   summary.hpp
   summary_impl.hpp
+  tensor.hpp
+  tensor_impl.hpp
   timer.hpp
   trainer_file_utils.hpp
   type_erased_matrix.hpp
